# SDL2-Caro

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/include/: Button.h  DataStructs.h  gameLogic.h
src/lib/: Button.cpp  DataStructs.cpp  gameLogic.cpp
